--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend API URL
-VITE_API_BASE_URL=https://your-backend-url.com
+VITE_API_BASE_URL=https://metrowayz.onrender.com
 
 # Example for local development
 # VITE_API_BASE_URL=http://localhost:3001
