--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ VITE_API_BASE_URL=https://metrowayz.onrender.com
 
 # Example for local development
 # VITE_API_BASE_URL=http://localhost:3001
+
+# Paystack Configuration
+# Get your public key from: https://dashboard.paystack.com/#/settings/developers
+# Use test key for development (starts with pk_test_)
+# Use live key for production (starts with pk_live_)
+VITE_PAYSTACK_PUBLIC_KEY=pk_test_your_paystack_public_key_here
