--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.0.0"
   },
