--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "metrowayz",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "server": "node server.js",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -11,11 +13,25 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.8.4",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "framer-motion": "^10.16.5",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
