--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,36 @@
-# Backend API URL
+# Frontend API URL
 VITE_API_BASE_URL=https://metrowayz.onrender.com
 
 # Example for local development
-# VITE_API_BASE_URL=http://localhost:3001
+# VITE_API_BASE_URL=http://localhost:3000
+
+# Backend MongoDB Connection
+# Get your connection string from MongoDB Atlas: https://cloud.mongodb.com
+# Example: mongodb+srv://username:password@cluster.mongodb.net/metrowayz
+MONGO_URI=your_mongodb_connection_string_here
+
+# Backend Environment
+NODE_ENV=development
+PORT=3000
+
+# JWT Secret for authentication (use a long random string)
+JWT_SECRET=your_very_long_and_random_jwt_secret_key_here
+
+# Google OAuth Credentials
+# Get from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# Cloudinary Configuration for image uploads
+# Get from: https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Email Configuration (Gmail with App Password)
+# Generate app password: https://myaccount.google.com/apppasswords
+MAIL_USER=your_email@gmail.com
+MAIL_PASS=your_gmail_app_password
 
 # Paystack Configuration
 # Get your public key from: https://dashboard.paystack.com/#/settings/developers
