--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@tanstack/react-query": "^5.8.4",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.0",
