--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.20.1",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "twilio": "^5.12.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
